<resources>
    <string name="app_name">Octo-umbrella</string>
    <string name="txt_signUp">CADASTRO</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_full_name">Nome Completo</string>
    <string name="txt_birth_date">Data de nascimento</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Senha</string>
    <string name="txt_confirmation_password">Senha Novamente</string>
    <string name="txt_confirm">Confirmar</string>
    <string name="txt_forget_password">Esqueceu sua senha?</string>
    <string name="txt_enter">Entrar</string>
    <string name="txt_create_your_Account"> <u> Crie sua conta</u> </string>

    <string name="txt_open_nav_drawer"> <u> Navigation Drawer Open</u> </string>
    <string name="txt_close_nav_drawer"> <u> Navigation Drawer Closed</u> </string>
</resources>