<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:fontFamily="@font/baloo"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="201dp"
        android:layout_height="221dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_octo_umbrella" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="556dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back_cad"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="12sp"
                android:fontFamily="@font/baloo"
                android:text="@string/txt_signUp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:fontFamily="@font/baloo"
                android:text="@string/txt_full_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="23sp">

            </TextView>

            <EditText
                android:id="@+id/inp_name"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:autofillHints="name"
                android:background="@drawable/input" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:fontFamily="@font/baloo"
                android:text="@string/txt_birth_date"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="23sp">

            </TextView>

            <EditText
                android:id="@+id/inp_birth_date"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:autofillHints="Date"
                android:background="@drawable/input"
                android:inputType="date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:fontFamily="@font/baloo"
                android:text="@string/txt_email"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="23sp">

            </TextView>

            <EditText
                android:id="@+id/inp_email"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:autofillHints="Date"
                android:background="@drawable/input"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:fontFamily="@font/baloo"
                android:text="@string/txt_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="23sp">

            </TextView>

            <EditText
                android:id="@+id/inp_password"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:autofillHints="Date"
                android:background="@drawable/input"
                android:inputType="textVisiblePassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:fontFamily="@font/baloo"
                android:text="@string/txt_confirmation_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="23sp">

            </TextView>

            <EditText
                android:id="@+id/inp_confirmation_password"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:autofillHints="Date"
                android:background="@drawable/input"
                android:inputType="textVisiblePassword" />

            <Button
                android:id="@+id/button3"
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/dark_blue"
                android:fontFamily="@font/baloo"
                android:onClick="SignUp"
                android:text="@string/txt_confirm"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>